Fixed an overflow issue on desktop viewport.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -168,6 +168,7 @@ $font-weight-5: 700;
         margin-top: 250px;
         position: relative;
         text-align: center;
+        overflow: visible;
         width: 100%;
         #phones-mobile
         {
